# wildmath

./: Cargo.toml
affinegeo/: Cargo.toml
affinegeo/src/: lib.rs
affinegeo2d/: Cargo.toml
affinegeo3d/: Cargo.toml
affinegeo3d/src/: lib.rs
algebra/: Cargo.toml
algebra/src/: lib.rs
complex/: Cargo.toml
extrational/: Cargo.toml
extrational/src/: lib.rs
finite/: Cargo.toml
finite/src/: lib.rs
geo/: Cargo.toml
geo/src/: lib.rs
interval/: Cargo.toml
interval/src/: lib.rs
linalg/: Cargo.toml
linalg/src/: lib.rs
polynumber/: Cargo.toml
polynumber/src/: lib.rs
polyratio/: Cargo.toml
polyratio/src/: lib.rs
projectivegeo/: Cargo.toml
projectivegeo/src/: lib.rs
projectivegeogreen/: Cargo.toml
projectivegeogreen/src/: lib.rs
projectivegeored/: Cargo.toml
projectivegeored/src/: lib.rs
proportion/: Cargo.toml
radical/: Cargo.toml
radical/src/: lib.rs
roottwo/: Cargo.toml
roottwo/src/: lib.rs
sequence/: Cargo.toml
sequence/src/: lib.rs
series/: Cargo.toml
series/src/: lib.rs
src/: affinegeo.rs  affinegeo2d.rs  affinegeo3d.rs  algebra.rs  belnap.rs  complex.rs  extrational.rs  finite.rs  interval.rs  lib.rs  main.rs  matrix.rs  polynumber.rs  polyratio.rs  projectivegeo.rs  proportion.rs  radical.rs  rduad.rs  sequence.rs  series.rs  tropical.rs
tropical/: Cargo.toml
tropical/src/: lib.rs
