[package]
name = "wildmath"
version = "0.1.0"
authors = ["Norbert Fröhlich <norbert.froehlich@alice.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
geo = { path = "geo" }
polynumber = { path = "polynumber" }
polyratio = { path = "polyratio" }
extrational = { path = "extrational" }

