[package]
name = "wildmath"
version = "0.1.0"
authors = ["Norbert Fröhlich <norbert.froehlich@alice.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
paste = "1.0"
affinegeo2d = { path = "affinegeo2d" }
polynumber = { path = "polynumber" }
polyratio = { path = "polyratio" }
extrational = { path = "extrational" }
finite = { path = "finite" }
projectivegeo = { path = "projectivegeo" }

