[package]
name = "series"
version = "0.1.0"
authors = ["Norbert Fröhlich <norbert.froehlich@alice.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
assert_approx_eq = "1.1.0"
algebra = { path = "../algebra" }

